[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/shaders/glowblue.tres" type="Material" id=1]
[ext_resource path="res://scenes/weapons/plasmarifle.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/items/weapon_spawner.gd" type="Script" id=3]
[ext_resource path="res://scenes/weapons/lasersword.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/weapons/firestaff.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/weapons/dragonslayingsword.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/ui elements/WeaponPopup.tscn" type="PackedScene" id=11]

[sub_resource type="SphereMesh" id=1]
resource_local_to_scene = true
material = ExtResource( 1 )
radius = 4.0
height = 8.0

[sub_resource type="SphereShape" id=2]
radius = 14.6263

[sub_resource type="Animation" id=3]
resource_name = "pickup"
length = 2.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "begin_delete"
}, {
"args": [  ],
"method": "remove"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("weapon:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 4, 0.965937 ),
"update": 0,
"values": [ Vector3( 0, 0.8, 0 ), Vector3( 0, 50, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("weapon:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 3.4822, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0.01, 0.01, 0.01 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("glow:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0.01, 0.01, 0.01 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("glow:mesh:material:shader_param/ScalarUniform")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 0.0883884 ),
"update": 0,
"values": [ 0.3, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("OmniLight:light_energy")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 11.33, 0.0 ]
}

[sub_resource type="Animation" id=4]
length = 14.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("weapon:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 7, 14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.8, 0 ), Vector3( 0, 1.4, 0 ), Vector3( 0, 0.8, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("weapon:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 14 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 360, 0 ) ]
}

[node name="weapon_spawner" type="Spatial"]
script = ExtResource( 3 )

[node name="glow" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.87086, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.618799, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 2 )

[node name="weapon" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "rotate"
anims/pickup = SubResource( 3 )
anims/rotate = SubResource( 4 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.887443, 0 )
light_color = Color( 0.505882, 0.72549, 0.8, 1 )
light_energy = 11.33
omni_range = 7.7049
omni_attenuation = 0.757858

[node name="WeaponList" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "Dragonslaying Sword", "Fire Staff", "Laser Sword", "Plasma Rifle" ), [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 2 ) ] ]

[node name="popup_pivot" type="Spatial" parent="."]

[node name="WeaponPopup" parent="popup_pivot" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -9.13736 )
visible = false
[connection signal="body_entered" from="Area" to="." method="enter"]
[connection signal="body_exited" from="Area" to="." method="exited"]
